--- a/detexify/Cargo.toml
+++ b/detexify/Cargo.toml
@@ -3,8 +3,13 @@ name = "detexify"
 version = "0.1.0"
 authors = ["Ben Sheffield <me@mrbenshef.co.uk>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+readme = "README.md"
+description = "The `detexify` crate is a port of the classifier that powers https://detexify.kirelabs.org/classify.html."
+license = "MIT"
+homepage = "https://github.com/mrbenshef/detexify-rust/"
+repository = "https://github.com/mrbenshef/detexify-rust/"
+keywords = ["tex", "latex", "classifier"]
+categories = ["computer-vision"]
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
