--- a/detexify/Cargo.toml
+++ b/detexify/Cargo.toml
@@ -17,3 +17,9 @@ serde_json = "1.0"
 serde_derive = "1.0"
 itertools = "0.9.0"
 tuple = "0.4.2"
+phf = "0.8"
+
+[build_dependencies]
+phf_codegen = { git = "https://github.com/jean-airoldie/rust-phf", branch = "owned_constfmt" }
+yaml-rust = "0.4"
+base64 = "0.12.3"
