--- a/detexify/Cargo.toml
+++ b/detexify/Cargo.toml
@@ -18,6 +18,7 @@ serde_derive = "1.0"
 itertools = "0.9.0"
 tuple = "0.4.2"
 phf = "0.8"
+base64 = "0.12.3"
 
 [build_dependencies]
 phf_codegen = "0.8"
