--- a/detexify-server/Cargo.toml
+++ b/detexify-server/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "detexify-server"
 version = "0.2.0"
-authors = ["Ben Sheffield <me@mrbenshef.co.uk>"]
+authors = ["Zoey Sheffield <me@zoeyfyi.co.uk>"]
 edition = "2018"
 readme = "README.md"
 description = "Rust port of the [detexify backend](https://github.com/kirel/detexify-hs-backend)."
 license = "MIT"
-homepage = "https://github.com/mrbenshef/detexify-rust/"
-repository = "https://github.com/mrbenshef/detexify-rust/"
+homepage = "https://github.com/zoeyfyi/detexify-rust/"
+repository = "https://github.com/zoeyfyi/detexify-rust/"
 keywords = ["tex", "latex", "classifier"]
 categories = ["computer-vision", "web-programming::http-server"]
 
