--- a/detexify/Cargo.toml
+++ b/detexify/Cargo.toml
@@ -19,6 +19,7 @@ itertools = "0.9.0"
 tuple = "0.4.2"
 phf = "0.8"
 base32 = "0.4.0"
+base64 = "0.12.3"
 
 [build_dependencies]
 phf_codegen = "0.8"
